--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,8 +5,6 @@ body {
   color: seashell;
   background-color: black;
   opacity: 0.9;
-  width:100%;
-  margin: 0 auto;
 }
 
 header {
@@ -54,6 +52,7 @@ nav span {
   justify-content: center;
   width: 100%;
   padding-top:70px;
+  min-width: 1200px;
 }
 
 #mission{
