--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -174,6 +174,8 @@ footer{
   justify-content: center;
   width: 100%;
   min-width: 1200px;
+  text-align: center;
+  margin: 0 auto;
 }
 
 h5.phone{
